バージョン情報を表示するように変更

--- a/public/index.html
+++ b/public/index.html
@@ -151,6 +151,12 @@
             text-decoration: underline;
             cursor: pointer;
         }
+        .version-info {
+            display: block;
+            margin-top: 8px;
+            color: #666;
+            font-size: 10px;
+        }
         @media (max-width: 480px) {
             body {
                 padding: 10px;
@@ -192,6 +198,7 @@
             
             <div class="footer">
                 <span class="logout-link" id="logoutButton">ログアウト</span>
+                <span class="version-info">v1.0.0</span>
             </div>
         </div>
     </div>
